objects/OPQ_AssessmentSection__c.object
<CustomObject>
    <description>SR0 - Each section is composed of several questions (coming from the Assessment Question object). The weight of the section * the weight of the section * the score = Scoring Assessment on the opportunity.</description>
    <fields>
        <fullName>Axis__c</fullName>
        <label>Axis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attractiveness</fullName>
                </value>
                <value>
                    <fullName>Feasibility</fullName>
                </value>
                <value>
                    <fullName>Project Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <description>SR0 - Gate that determine the questionnaire to apply</description>
        <label>Gate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S0</fullName>
                </value>
                <value>
                    <fullName>S1</fullName>
                </value>
                <value>
                    <fullName>P0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SectionWeight__c</fullName>
        <label>Section Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TECH_Axis__c</fullName>
        <description>This field is used in VFC08_OPQTemplate for opportunity assessment and project category tool functionality.</description>
        <formula>IF(  OR( ISPICKVAL( Axis__c , &quot;Attractiveness&quot;) , ISPICKVAL( Axis__c , &quot;Feasibility&quot;) ) , 
     &quot;DC&quot;, 
     IF(ISPICKVAL( Axis__c , &quot;Project Category&quot;), &quot;PCT&quot;, null)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_Axis</label>
        <type>Text</type>
    </fields>
    <label>Decision Criteria Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Axis__c</columns>
        <columns>Position__c</columns>
        <columns>NAME</columns>
        <columns>SectionWeight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Axis__c</field>
            <operation>equals</operation>
            <value>Attractiveness</value>
        </filters>
        <label>Attractiveness Questions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Axis__c</columns>
        <columns>Gate__c</columns>
        <columns>Position__c</columns>
        <columns>SectionWeight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Criteria Sections</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>